@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 
 0.27
 	Look in generic DOCUMENT_ROOT/../conf before site specific DOCUMENT_ROOT/conf
+	Added the level argument to new()
 
 0.26	Fri May 16 21:10:49 EDT 2025
 	Change location of bug reports to RT
